207 api connector - Import of openapi spec and usage is broken, remove ? extends for final classes